--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,5 @@
-.App {
+.App-body {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
   background-color: #eee;
   min-height: 100vh;
   display: flex;
@@ -17,6 +8,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 5em 0;
 }
 
 .iframe-load-error {
