--- a/public/css/app.css
+++ b/public/css/app.css
@@ -413,6 +413,8 @@ div#control-container div#central-control-container div#central-controls div#pla
   display: inline-block;
   width: 60px;
   height: 60px;
+  min-width: 60px;
+  min-height: 60px;
   cursor: pointer;
   float: left;
   margin-right: 65px; 
